# sm-usermgmt

./: .gitignore  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
api/v1/users/: routers.py
apps/auth/: constants.py  dependencies.py  schemas.py  utils.py
apps/base/: utils.py
apps/users/: models.py  schemas.py
db/: base.py  mixins.py  session.py
migrations/: env.py
migrations/versions/: bd6202154f01_.py  f2fbe599bffa_.py
settings/: config.py
